# soccerwindow2

./: CMakeLists.txt
src/qt4/: ball_painter.cpp  ball_painter_rcss.cpp  ball_trace_painter.cpp  color_setting_dialog.cpp  debug_log_dir_dialog.cpp  debug_log_painter.cpp  debug_message_window.cpp  debug_painter.cpp  detail_dialog.cpp  dir_selector.cpp  draw_config.cpp  field_canvas.cpp  field_painter.cpp  font_setting_dialog.cpp  image_save_dialog.cpp  launcher_dialog.cpp  log_player_tool_bar.cpp  main_window.cpp  monitor_client.cpp  monitor_move_dialog.cpp  offside_line_painter.cpp  player_control_painter.cpp  player_painter.cpp  player_painter_rcss.cpp  player_trace_painter.cpp  player_type_dialog.cpp  qt4.pro  score_board_painter.cpp  score_board_painter_rcss.cpp  team_graphic_painter.cpp  view_config_dialog.cpp  voronoi_diagram_painter.cpp
